--- a/Modules/hic_matrix_generation/hic_matrix_generation.Rmd
+++ b/Modules/hic_matrix_generation/hic_matrix_generation.Rmd
@@ -1,5 +1,10 @@
 ---
-output: github_document
+title: Generating Hi-C matrices
+output: 
+ github_document: 
+  default
+ pdf_document: 
+  latex_engine: xelatex
 ---
 
 <!-- hic_matrix_generation.md is generated from hic_matrix_generation.Rmd. Please edit that file -->
@@ -46,11 +51,12 @@ fanc auto --help
 
 For [fanc auto](https://fan-c.readthedocs.io/en/latest/fanc-executable/fanc-generate-hic/fanc_auto.html), the help section includes two types of arguments: positional and optional arguments. Some arguments are expected in a specific order after the subcommand and thus are called positional arguments. In addition to positional arguments, optional arguments allow for more control over the subcommand. In case of fanc auto important optional arguments include specifying the genome and restriction enzymes used.
 
+
 # Practical 2: Example Hi-C matrix generation with FAN-C
 
 For this example, we are going to use the command fanc auto (see Generating Hi-C matrices with fanc) to construct a Hi-C map from a subset of a previously published adrenal tissue dataset (SRR4271982 of GSM2322539). For this course we have also downloaded K562 Hi-C data which will be analysed in practical 11 using what we learnt in this example. If the MiSeq sequencing for your samples has already finished by now, we can also analyse this data instead.
 
-(1)  Copy example files from shared folder into working folder
+(1) Copy example files from shared folder into working folder
 
 ```{r cp, eval = FALSE}
 cd
@@ -61,7 +67,7 @@ unzip examples.zip
 cd examples
 ```
 
-(2)  From the newly created examples folder, run:
+(2) From the newly created examples folder, run:
 
 ```{r fanc_ae, eval = FALSE}
 fanc auto SRR4271982_chr18_19_1.fastq.gzip \
@@ -72,9 +78,9 @@ fanc auto SRR4271982_chr18_19_1.fastq.gzip \
 ```
 
 The --run-with test argument causes fanc to only print the commands it would execute, but to exit before running any processing steps. Use this to review the pipeline and ensure you chose the right parameters and that there are no errors.
-When you remove the --run-with test argument, fanc will work through the pipeline. On a modern desktop computer with at least four computing cores the command should take less than 30 minutes to finish. It will generate several binned, bias-corrected Hi-C matrices from the FASTQ input.
+When you remove the --run-with test argument, fanc will work through the pipeline. On a modern desktop computer with at least four computing cores the command should take less than 30 minutes to finish. It will generate several binned, bias-corrected Hi-C matrices from the FASTQ input.
 
-(3) Run fanc on the example data by removing the --run-with test argument from the command above. (THIS STEP WILL TAKE ~30 MINUTES.) Leave this process running and open a new terminal to work with in the meantime. You can read details about fanc auto and all of its parameters in Generating Hi-C matrices with fanc. (4) fanc auto will generate the following folder structure in the output folder:
+(3) Run fanc on the example data by removing the --run-with test argument from the command above. (THIS STEP WILL TAKE ~30 MINUTES.) Leave this process running and open a new terminal to work with in the meantime. You can read details about fanc auto and all of its parameters in Generating Hi-C matrices with fanc. (4) fanc auto will generate the following folder structure in the output folder:
 
 ```{r dir, eval = FALSE}
 output
@@ -104,9 +110,10 @@ The processed .bam, .pairs and .hic files will be added in these folders after c
 
 Congratulations! You have generated your first Hi-C matrix.
 
+
 # Practical 3: Example visualisation with fancplot
 
-(1)  We can plot the newly generated Hi-C maps easily using the fancplot command. Simply execute:
+(1) We can plot the newly generated Hi-C maps easily using the fancplot command. Simply execute:
 
 ```{r fancplot_e, eval = FALSE}
 fancplot chr18:63mb-70mb -p triangular -vmax 0.05 \
@@ -115,7 +122,7 @@ fancplot chr18:63mb-70mb -p triangular -vmax 0.05 \
 
 This will plot the region 63-70Mb of chromosome 18 in the familiar Hi-C plot. Note that this dataset is very small and hence the quality of the matrix not particularly great - but TADs are clearly visible.
 
-(2)  You can find details about the plotting executable fancplot in Basic usage. Or by typing
+(2) You can find details about the plotting executable fancplot in Basic usage. Or by typing
 
 ```{r fancplot_h, eval = FALSE}
 fancplot --help
@@ -127,7 +134,7 @@ Similar to the fanc command, we can access the help section for each plot type b
       fancplot -p triangular --help
 ```
 
-(3)  Scroll around the genome and save a .png image using the interactive window.
+(3) Scroll around the genome and save a .png image using the interactive window.
 
 (4) Alternatively, we can save the plot directly in pdf format by specifying an --output argument like:
 
@@ -149,7 +156,7 @@ fanc auto will map reads in FASTQ (or gzipped FASTQ) files to a reference genome
 
 Internally, fanc auto constructs its Hi-C processing pipeline from more specialised fanc commands. When describing the different pipeline steps and how you can control them below, we will also reference the specialised command that is used to build each step of the pipeline.
 
-(1)  Check again the individual steps run by fanc auto by running
+(1) Check again the individual steps run by fanc auto by running
 
 ```{r fanc_at, eval = FALSE}
 fanc auto SRR4271982_chr18_19_1.fastq.gzip \
@@ -161,7 +168,7 @@ fanc auto SRR4271982_chr18_19_1.fastq.gzip \
 
 Three major steps constitute the core of the pipeline: fanc map, fanc pairs and fanc hic. To (iteratively) map FASTQ files directly with FAN-C, use the fanc map command.
 
-(2)  Here is a minimal example: (DO NOT RUN)
+(2) Here is a minimal example: (DO NOT RUN)
 
 ```{r fanc_m, eval = FALSE}
 fanc map SRR4271982_chr18_19_1.fastq.gzip \
@@ -179,7 +186,7 @@ fanc map SRR4271982_chr18_19_1.fastq.gzip \
 
 You can change the suffix of the output file to .bam and fanc map will automatically convert the mapping output to BAM format.
 
-(3) Because of the chimeric nature of Hi-C fragments, fanc auto performs iterative mapping as a default: Reads are initially trimmed to 25bp (change this with the -m option) before mapping, and then iteratively expanded by 10bp (change the step size with the -s option) until a unique, high quality mapping location can be found. The associated quality cut-off is 3 for BWA and 30 for Bowtie2, but can be changed with the -q parameter. (DO NOT RUN)
+(3) Because of the chimeric nature of Hi-C fragments, fanc auto performs iterative mapping as a default: Reads are initially trimmed to 25bp (change this with the -m option) before mapping, and then iteratively expanded by 10bp (change the step size with the -s option) until a unique, high quality mapping location can be found. The associated quality cut-off is 3 for BWA and 30 for Bowtie2, but can be changed with the -q parameter. (DO NOT RUN)
 
 ```{r fanc_ms, eval = FALSE}
 # expand by 5bp every iteration and accept lower quality
@@ -197,16 +204,16 @@ fanc map SRR4271982_chr18_19_1.fastq.gzip \
       SRR4271982_chr18_19_1.sam -t 16 -r HindIII
 ```
 
-Final practical arguments to speed up the mapping. We can assign more threads to the mapping process using the -t parameter. If you are using Bowtie2, you can additionally use the --memory-map option, which will load the entire Bowtie2 index into memory to be shared across all Bowtie2 processes. Use this option if your system has a lot of memory available to speed up the mapping. Finally, if you are using the -tmp option, which causes fanc auto to perform most pipeline steps in a temporary directory, you may want to use the --split-fastq option to split the FASTQ files into smaller chunks before mapping, so you can save space on your tmp partition. In practice, most of these parameters have sensible defaults in fanc auto. You might want to enforce iterative mapping to increase the number of reads recovered and increase the number of threads to be used
+Final practical arguments to speed up the mapping. We can assign more threads to the mapping process using the -t parameter. If you are using Bowtie2, you can additionally use the --memory-map option, which will load the entire Bowtie2 index into memory to be shared across all Bowtie2 processes. Use this option if your system has a lot of memory available to speed up the mapping. Finally, if you are using the -tmp option, which causes fanc auto to perform most pipeline steps in a temporary directory, you may want to use the --split-fastq option to split the FASTQ files into smaller chunks before mapping, so you can save space on your tmp partition. In practice, most of these parameters have sensible defaults in fanc auto. You might want to enforce iterative mapping to increase the number of reads recovered and increase the number of threads to be used
 
 
 # Practical 5: fanc pairs: Generating and filtering read Pairs
 
-The fanc pairs command handles the creation and modification of Pairs objects, which represent the mate pairs in a Hi-C library mapped to restriction fragments. Possible inputs are: two SAM/BAM files (paired-end reads, sorted by read name), a HiC-Pro valid pairs file, a 4D Nucleome pairs file, or an existing FAN-C Pairs object. 
+The fanc pairs command handles the creation and modification of Pairs objects, which represent the mate pairs in a Hi-C library mapped to restriction fragments. Possible inputs are: two SAM/BAM files (paired-end reads, sorted by read name), a HiC-Pro valid pairs file, a 4D Nucleome pairs file, or an existing FAN-C Pairs object. 
 
 To process SAM/BAM files, no additional external software is required. However, we do recommend the installation of Sambamba, which can greatly speed up the SAM sorting step required for merging mate pairs into the Pairs object.
 
-(1)  A minimal fanc auto command using SAM/BAM files could look like this: (DO NOT RUN)
+(1) A minimal fanc auto command using SAM/BAM files could look like this: (DO NOT RUN)
 
 ```{r fanc_as, eval = FALSE}
 fanc auto output/sam/SRR4271982_chr18_19_1.bam \
@@ -214,7 +221,7 @@ fanc auto output/sam/SRR4271982_chr18_19_1.bam \
       output2/ -g hg19_chr18_19_re_fragments.bed
 ```
 
-(2)  while minimal fanc pairs command using SAM/BAM files could look like this: (DO NOT RUN)
+(2) while minimal fanc pairs command using SAM/BAM files could look like this: (DO NOT RUN)
 
 ```{r fanc_ps, eval = FALSE}
 fanc pairs output/sam/SRR4271982_chr18_19_1_sort.bam \
@@ -225,11 +232,12 @@ fanc pairs output/sam/SRR4271982_chr18_19_1_sort.bam \
 
 The -g or --genome parameter is mandatory, and is used to load (or construct) the restriction fragment regions necessary for building the fragment-level Hi-C object. You can either directly provide a region-based file with restriction fragments (most file formats are supported, including BED and GFF), or use a FASTA file with the genomic sequence in conjunction with the -r or --restriction-enzyme parameter. In the latter case, fanc auto will perform an in silico digestion of the genome and use the resulting restriction fragments from there.
 
+
 # Practical 6: Pair-level filtering 
 
 fanc pairs provides a lot of parameters for filtering read pairs according to different criteria. By default, if not specified otherwise, no filtering is performed on the read pairs (passthrough). Typically, however, you will at least want to filter out unmappable (-m) and multimapping reads (-u or -us). It is also a good idea to filter by alignment quality (-q <n>). Good cutoffs for Bowtie2 and BWA are 30 and 3, respectively. If you suspect your Hi-C library to be contaminated by DNA from a different organism, you can align your original reads to a different genome and pass the resulting SAM/BAM file to the -c patameter (ensure no unmappable reads are in the file!). This will filter out all reads that have a valid alignment in the putative contaminants genome (by qname). All of the above filters operate on single reads, but will filter out the pair if either of the reads is found to be invalid due to a filtering criterion.
 
-(1)  while minimal fanc pairs command using SAM/BAM files could look like this: (DO NOT RUN)
+(1) while minimal fanc pairs command using SAM/BAM files could look like this: (DO NOT RUN)
 
 ```{r fanc_p2, eval = FALSE}
 fanc pairs output/sam/SRR4271982_chr18_19_1_sort.bam \
@@ -246,8 +254,6 @@ fanc pairs output/sam/SRR4271982_chr18_19_1_sort.bam \
 ls output/plots/stats/fanc_example.pairs.stats.pdf
 ```
 
-
-
 (3) An additional set of filters operates on the properties of the read pair. You may want to filter out self-ligated fragments, which provide no spatial information with the -l parameter. As Hi-C experiments generally rely on PCR amplification, it is expected to find a lot of PCR duplicates in the library. You can filter those with the -p <n> parameter, where <n> denotes the distance between the start of two alignments that would still be considered a duplicate. Normally you would use 1 or 2, but you can use higher values to be more stringent with filtering. (DO NOT RUN)
 
 ```{r fanc_pf, eval = FALSE}
@@ -258,7 +264,7 @@ fanc pairs output/pairs/SRR4271982_chr18_19.pairs \
 
 (4) You can also check how many pairs were filtered at this step by checking the statistics plots being generated in the output folder (See the plot on the right)
 
-(5)  Depending on the experimental setup, it is sometimes expected to find valid Hi-C alignments near restriction sites. You can filter read pairs for their (cumulative) distance to the nearest restriction sites using the -d parameter. To determine that cutoff, or to detect any issues with the Hi-C library, you can first use the --re-dist-plot parameter. Note that this will only plot a sample of 10,000 read pairs for a quick assessment: (DO NOT RUN)
+(5) Depending on the experimental setup, it is sometimes expected to find valid Hi-C alignments near restriction sites. You can filter read pairs for their (cumulative) distance to the nearest restriction sites using the -d parameter. To determine that cutoff, or to detect any issues with the Hi-C library, you can first use the --re-dist-plot parameter. Note that this will only plot a sample of 10,000 read pairs for a quick assessment: (DO NOT RUN)
 
 ```{r fanc_pd, eval = FALSE}
 fanc pairs --re-dist-plot re-dist.png \
@@ -271,9 +277,7 @@ fanc pairs --re-dist-plot re-dist.png \
 ls output/plots/stats/fanc_example.pairs.re_dist.pdf
 ```
 
-
-
-(7)  Jin et al. (2013) have identified several errors that stem from incomplete digestion and which can be identified from different types of ligation products. You can filter these using the -i <n> and -o <n> parameters, for the inward and outward ligation errors, respectively. If you need help finding a good cut-off, you may use the --ligation-error-plot parameter. (DO NOT RUN)
+(7) Jin et al. (2013) have identified several errors that stem from incomplete digestion and which can be identified from different types of ligation products. You can filter these using the -i <n> and -o <n> parameters, for the inward and outward ligation errors, respectively. If you need help finding a good cut-off, you may use the --ligation-error-plot parameter. (DO NOT RUN)
 
 ```{r fanc_ple, eval = FALSE}
 fanc pairs --ligation-error-plot ligation-err.png \
@@ -288,11 +292,12 @@ ls output/plots/stats/fanc_example.pairs.ligation_error.pdf
 
 Usually 1-10kb are often reasonable cut-offs. You can also let FAN-C attempt to find suitable cut-offs based on the over-representation of certain ligation products using the --filter-ligation-auto parameter, but this is not always 100% reliable.
 
+
 # Practical 7: fanc hic: Generating, binning, and filtering Hic objects
 
 The fanc hic command is used to generate fragment-level and binned+filtered Hi-C matrices. 
 
-(1)  You can use FAN-C Pairs files as input for fanc hic: (DO NOT RUN)
+(1) You can use FAN-C Pairs files as input for fanc hic: (DO NOT RUN)
 
 ```{r fanc_hp, eval = FALSE}
 fanc hic \
@@ -304,7 +309,7 @@ Without additional parameters, this will generate a fragment-level Hic object an
 
 If you already have a fragment-level Hic file and you want to bin it, or perform filtering or matrix balancing, you can also use this as input:
 
-(2)  You can use FAN-C Pairs files as input for fanc hic: (DO NOT RUN)
+(2) You can use FAN-C Pairs files as input for fanc hic: (DO NOT RUN)
 
 ```{r fanc_hh, eval = FALSE}
 fanc hic \
@@ -313,6 +318,7 @@ fanc hic \
 ```
 
 You can use the -b parameter to bin the fragment-level Hi-C matrix. You can either use integers (1000000) or common abbreviations (1Mb). The filtering steps outlined below only apply to binned Hic matrices.
+
 
 # Practical 8: Filtering and balancing
 
@@ -331,7 +337,6 @@ ls output/plots/stats/fanc_example_*.stats.pdf
 ```
 
 
-
 # Practical 9: Quality control: Cis/trans ratio
 
 A useful metric to assess the quality of a Hi-C experiment is the ratio between Hi-C contacts happening between loci inside the same chromosome (cis) and contacs happening between fragments in different chromosomes (trans). Problems with suboptimal fixation would lead to a loss of cis interactions and a gain of trans interactions. Additionally, problems with and excess of ligations would lead to an artificial increase in trans contacts. 
@@ -346,17 +351,18 @@ Please note that this is a normalised cis/(cis+trans) ratio, so it corresponds t
 
 For this toy example, we are only using read pairs for which either end maps to chr18 or chr19, so the cis/trans ratio is bound to be artificially high since we are missing many inter-chromosomal contacts.
 
+
 # Practical 10: Working with Cooler, Juicer, and text files
 
 FAN-C is fully compatible with Hi-C files from Cooler (.cool and .mcool) and Juicer (.hic). There is no need to convert them to FAN-C format, you can use them directly in any fanc command. Text files, such as HiC-Pro output or 4D Nucleome pairs files must be converted to FAN-C format before they can be used in any commands. Please note that juicer’s .hic format is not the same as FAN-C’s .hic format. 
 
-(1)  To convert our format to either cooler’s multi-resolution .cool format or juicer’s .hic format you can simply:
+(1) To convert our format to either cooler’s multi-resolution .cool format or juicer’s .hic format you can simply:
 
 ```{r fanc_tc, eval = FALSE}
 fanc to-cooler \ output/hic/binned/fanc_example_1mb.hic \ output/hic/binned/fanc_example_1mb.cool
 ```
 
-(2)  or:
+(2) or:
 
 ```{r fanc_tj, eval = FALSE}
 fanc to-juicer \ output/hic/binned/fanc_example_1mb.hic \ output/hic/binned/fanc_example_1mb.juicer.hic
@@ -402,13 +408,13 @@ We will now analyse K562 Hi-C data generated by Moquin et al 2018. This data is 
 
 ## Option A. 
 
-(1)  Sequence Read Archives (SRA) files should be available in the shared folder under hic_k562/. These SRA files were downloaded using commands like: (DO NOT RUN)
+(1) Sequence Read Archives (SRA) files should be available in the shared folder under hic_k562/. These SRA files were downloaded using commands like: (DO NOT RUN)
 
 ```{r wget, eval = FALSE}
 wget https://sra-pub-run-odp.s3.amazonaws.com/sra/SRR5470534/SRR5470534
 ```
 
-(2)  We can convert the downloaded SRA files into FASTQ files using the sratoolkit like: 
+(2) We can convert the downloaded SRA files into FASTQ files using the sratoolkit like: 
 (This will take ~15-20 minutes to run, pick one of the SRA files and follow this tutorial with it.)
 
 ```{r fastq_dump, eval = FALSE}
@@ -417,7 +423,7 @@ fastq-dump --outdir ./ --gzip --split-3 SRR5470534
 
 The fastq-dump command will split the SRA file into two .fastq files if the library is pair-ended or a single .fastq file if it is a single-end library. Additionally, it will save space by compressing them into .gzip format.
 
-(3)  As mentioned earlier in the course, it is always a good idea to run fastQC on any next-generation sequencing library to spot potential technical problems with adaptor contaminations and remove them beforehand:
+(3) As mentioned earlier in the course, it is always a good idea to run fastQC on any next-generation sequencing library to spot potential technical problems with adaptor contaminations and remove them beforehand:
 
 ```{r fastqc, eval = FALSE}
 mkdir fastqc
@@ -425,14 +431,13 @@ fastqc -o fastqc/ SRR5470534_1.fastq.gz
 fastqc -o fastqc/ SRR5470534_2.fastq.gz
 ```
 
-(4)  Examine the fastQC output. How big are they? Are they any good? Should we run adaptor trimming on them?
-
+(4) Examine the fastQC output. How big are they? Are they any good? Should we run adaptor trimming on them?
 
 ## Option B. 
 
 The subset data for this accession number can be found in our shared Keeper library:https://keeper.mpdl.mpg.de/d/9b1c1788f97642a188f3/ 
 
-(1)  If not available in the shared folder, please download each subset .fastq file into your computer by clicking on the sample that you will focus on. Then let’s assess the quality of the .fastq files:
+(1) If not available in the shared folder, please download each subset .fastq file into your computer by clicking on the sample that you will focus on. Then let’s assess the quality of the .fastq files:
 
 ```{r fastqc2, eval = FALSE}
 mkdir fastqc
@@ -440,7 +445,7 @@ fastqc -o fastqc/ SRR5470534_1.chr18_chr19.fastq.gz
 fastqc -o fastqc/ SRR5470534_2.chr18_chr19.fastq.gz
 ```
 
-(2)  Examine the fastQC output. How big are they? Are they any good? Should we run adaptor trimming on them?
+(2) Examine the fastQC output. How big are they? Are they any good? Should we run adaptor trimming on them?
 
 ## Option C. 
 
@@ -454,7 +459,8 @@ fastqc -o fastqc/ SRR5470534_1.chr18_chr19.fastq.gz
 fastqc -o fastqc/ SRR5470534_2.chr18_chr19.fastq.gz
 ```
 
-(4)  Examine the fastQC output. How big are they? Are they any good? Should we run adaptor trimming on them?
+(4) Examine the fastQC output. How big are they? Are they any good? Should we run adaptor trimming on them?
+
 
 # Practical 12: Running FAN-C
 
@@ -489,7 +495,8 @@ fanc auto SRR4271982_chr18_19_1.fastq.gzip \
       --split-ligation-junction -q 30
 ```
 
-## Answers
+
+# Answers
 
 1. For this analysis, we switched to using the full hg38 genome instead of only two hg19 chromosomes. It’s always a good idea to use the most recent version of the genome! Please note that we additionally changed the order of the chromosomes to match the negspy repository for compatibility down the line with HiGlass.
 2. We switched to using BWA as a mapping algorithm. (In our hands this mapper recovers a higher proportion of aligned reads without iterative mapping.) 
@@ -525,9 +532,10 @@ For people running C. Change the paths to the subset fastq files you chose and c
 
 For the steps in the next tutorial, please use the results from this step to perform the rest of the analysis.
 
+
 # Practical 13: Quality control
 
-(1)  Calculate the inward/outward ligation error plot. 
+(1) Calculate the inward/outward ligation error plot. 
 
 ```{r fanc_plex, eval = FALSE}
 fanc pairs \
@@ -540,7 +548,7 @@ Is it ok that we filter out any inward or outward interactions happening among D
 
 (2) Look at the read pair filter statistics plot generated as part of fanc auto. How does this library compare to the one used in the first example?
 
-(3)  Calculate cis-trans ratios on the 2mb (or 1mb) binned matrix.
+(3) Calculate cis-trans ratios on the 2mb (or 1mb) binned matrix.
 
 ```{r fanc_ctex, eval = FALSE}
 fanc cis-trans SRR5470534_2mb.hic
@@ -552,9 +560,10 @@ Are these scores indicative of a good library or a bad one? Can you see a differ
 fanc cis-trans SRR5470534_1mb.hic
 ```
 
+
 # Practical 14: Plotting
 
-(1)  Plot the same region that we looked at 100 kb resolution. Can you see a significant difference with the first matrix? Is this library sequenced to a higher sequencing depth?
+(1) Plot the same region that we looked at 100 kb resolution. Can you see a significant difference with the first matrix? Is this library sequenced to a higher sequencing depth?
 
 ```{r fancplot_ex, eval = FALSE}
 fancplot chr18:63mb-70mb \
